--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,19 @@
 Package: yea13
 Type: Package
-Title: Identification of Putative Clusters in Surveillance Data According to Algorithm by Ypma et al.
-Version: 0.1
-Author: Johannes Elias
-Maintainer: Johannes Elias <joheli@gmx.net>
+Title: Identification of Putative Clusters in Surveillance Data According to Algorithm by Ypma et al. 2013
+Version: 0.2
+Authors@R: c(person("Elias", "Johannes", email = "joheli@gmx.net", role = c("aut", "cre")), person("Hoehle", "Michael", role = c("aut")))
 Description: See https://www.ncbi.nlm.nih.gov/pubmed/23922835 for the paper by Ypma et al. and the underlying problem.
 License: AGPL 3
 Encoding: UTF-8
 LazyData: true
 Imports:
-  ape (>= 5.3),
-  cluster (>= 2.0.7),
-  dplyr   (>= 0.8.3),
-  igraph  (>= 1.2.4.1),
-  NetOrigin (>= 1.0-3)
+    cluster (>= 2.0.7),
+    dplyr (>= 0.8.3),
+    igraph (>= 1.2.4.1),
+    NetOrigin (>= 1.0-3),
+    Rcpp
+LinkingTo: Rcpp
 Suggests:
   tidyr (>= 0.8.1)
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.1
